k8s/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: finans-basic-auth
  namespace: default
spec:
  basicAuth:
    secret: finans-auth-secret
