k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finans-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finans-backend
  template:
    metadata:
      labels:
        app: finans-backend
    spec:
      containers:
      - name: finans-backend
        image: finans-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: finans-backend-service
spec:
  selector:
    app: finans-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
