k8s/postgres.yaml
# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finans-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finans-postgres
  template:
    metadata:
      labels:
        app: finans-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: finans-postgres-data
      volumes:
      - name: finans-postgres-data
        persistentVolumeClaim:
          claimName: finans-postgres-pvc

---
# 3. Service
apiVersion: v1
kind: Service
metadata:
  name: finans-postgres-service
spec:
  selector:
    app: finans-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
